updated cofing file and Browserdriverfactory java file to handle multiple environments and updated pom for Allure reports